--- a/MyProducts.html
+++ b/MyProducts.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Books</title>
-    <link rel="stylesheet" href="MyBooks.css">
+    <title>My Products</title>
+    <link rel="stylesheet" href="styles/MyProducts.css">
 </head>
 <body>
     <header>
-        <h>Welcome to the library &#128218;</h>
+        <h>Welcome to the Store &#128075;</h>
         <div class="dropdown">
             <button class="optionsbtn">Options &#9778;</button>
             <div class="options">
-                <a href="ReadBooks.php"> View Book</a>
-                <a href="CreateBook.php"> Add Book</a>
-                <a href="UpdateBooks.php"> Update Book</a>
-                <a href="DeleteBook.php"> Delete Book</a><br>
+                <a href="pages/Readproducts.php"> View Product</a>
+                <a href="pages/CreateProduct.php"> Add Product</a>
+                <a href="pages/UpdateProducts.php"> Update Product</a>
+                <a href="pages/DeleteProduct.php"> Delete Product</a><br>
             </div>
         </div>
     </header>
@@ -25,11 +25,11 @@
         <div class="img">
             <div class="slider">
                 <div class="slides">
-                    <img class="slide" src="book1.jpg" alt="book1">
-                    <img class="slide" src="book2.jpg" alt="book2">
-                    <img class="slide" src="book3.webp" alt="book3">
-                    <img class="slide" src="book4.jpg" alt="book4">
-                    <img class="slide" src="book5.png" alt="book5">
+                    <img class="slide" src="product1.jpg" alt="product1">
+                    <img class="slide" src="product2.jpg" alt="product2">
+                    <img class="slide" src="product3.png" alt="product3">
+                    <img class="slide" src="product4.jpg" alt="product4">
+                    <img class="slide" src="product5.png" alt="product5">
                 </div>
                 <button class="prev" onclick="prevSlide()">&#10094</button>
                 <button class="next" onclick="nextSlide()">&#10095</button>
@@ -62,6 +62,6 @@
             done
         </marquee>
     </footer>
-    <script src="MyBooks.js"></script>
+    <script src="js/MyProducts.js"></script>
 </body>
 </html>
